--- a/index.html
+++ b/index.html
@@ -5,3 +5,28 @@
     background-image: url("img.jpeg");
   }
 </style>
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Square Container</title>
+    <style>
+        .square-container {
+            width: 200px;
+            height: 200px;
+            background-color: #f0f0f0;
+            /* Add any other styling you'd like */
+        }
+    </style>
+</head>
+<body>
+    <center>
+      <div class="square-container">
+        <!-- You can add your content here -->
+        <p>This is my square container!</p>
+        <button>Click me</button>
+        <!-- Add more elements as needed -->
+      </div>
+    </center>
+</body>
+</html>
