--- a/index.html
+++ b/index.html
@@ -9,12 +9,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Square Container</title>
     <style>
         .square-container {
-            width: 200px;
-            height: 200px;
-            background-color: #f0f0f0;
+            width: 500px;
+            height: 1000px;
+            background-color: #292a2b;
             /* Add any other styling you'd like */
         }
     </style>
