--- a/index.html
+++ b/index.html
@@ -3,29 +3,12 @@
 <style>
   body {
     background-image: url("img.jpeg");
+    font-family: Helvetica, Sans-Serif;
+    color: white;
   }
 </style>
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <style>
-        .square-container {
-            width: 500px;
-            height: 1000px;
-            background-color: #292a2b;
-            /* Add any other styling you'd like */
-        }
-    </style>
-</head>
-<body>
-    <center>
-      <div class="square-container">
-        <!-- You can add your content here -->
-        <p>This is my square container!</p>
-        <button>Click me</button>
-        <!-- Add more elements as needed -->
-      </div>
-    </center>
-</body>
-</html>
+<center>
+  <h1>hi!</h1>
+  <h2>i'm sneaky</h2>
+</center>
