--- a/index.html
+++ b/index.html
@@ -6,9 +6,20 @@
     font-family: Helvetica, Sans-Serif;
     color: white;
   }
+
+  .link { 
+    line-height: 19px; 
+  }
 </style>
 
 <center>
-  <h1>hi!</h1>
+  <i><h1>hi!</h1></i>
   <h2>i'm sneaky</h2>
+  <p> </p>
+  <p>welcome to my epic website!</p>
+
+  <div>
+    <img style="float:left;" src="https://media.tenor.com/pXEDrZV2s4QAAAAi/star-spinning.gif">
+    <a href="#" class="link">super mario 64</a>
+  </div>
 </center>
