--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     color: white;
   }
 
-  .link { 
-    line-height: 19px; 
+  .valign {
+    vertical-align:middle;
   }
 </style>
 
@@ -19,7 +19,6 @@
   <p>welcome to my epic website!</p>
 
   <div>
-    <img style="float:left;" src="https://media.tenor.com/pXEDrZV2s4QAAAAi/star-spinning.gif">
-    <a href="#" class="link">super mario 64</a>
+    <img class="valign" src="https://media.tenor.com/pXEDrZV2s4QAAAAi/star-spinning.gif" width="24px" height="19px"><a class="valign" href="#"> sm64</a>
   </div>
 </center>
