--- a/index.html
+++ b/index.html
@@ -19,6 +19,6 @@
   <p>welcome to my epic website!</p>
 
   <div>
-    <img class="valign" src="https://media.tenor.com/pXEDrZV2s4QAAAAi/star-spinning.gif" width="24px" height="19px"><a class="valign" href="#"> sm64</a>
+    <img class="valign" src="https://media.tenor.com/pXEDrZV2s4QAAAAi/star-spinning.gif" width="36px" height="24px"><a style='font-size:1.2em' class="valign" href="#"> sm64</a>
   </div>
 </center>
