--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
   <p>welcome to my epic website!</p>
 
   <div>
-    <img class="valign" src="https://media.tenor.com/pXEDrZV2s4QAAAAi/star-spinning.gif" width="42px" height="42px"><a style='font-size:1.3em' class="valign" href="#"> sm64</a>
+    <h2>game stuff</h2>
+    <p> </p>
+    <img class="valign" src="https://media.tenor.com/pXEDrZV2s4QAAAAi/star-spinning.gif" width="42px" height="42px"><a style='font-size:1.3em' class="valign" href="#"> super mario 64</a>
   </div>
 </center>
