--- a/index.html
+++ b/index.html
@@ -22,5 +22,8 @@
     <h2>game stuff</h2>
     <p> </p>
     <img class="valign" src="https://media.tenor.com/pXEDrZV2s4QAAAAi/star-spinning.gif" width="42px" height="42px"><a style='font-size:1.3em' class="valign" href="sm64.html"> super mario 64</a>
+    <h2>scripting</h2>
+    <p> </p>
+    <img class="valign" src="https://media.tenor.com/pXEDrZV2s4QAAAAi/star-spinning.gif" width="42px" height="42px"><a style='font-size:1.3em' class="valign" href="rblxstudio.html"> roblox studio (scripting)</a>
   </div>
 </center>
