--- a/index.html
+++ b/index.html
@@ -18,6 +18,13 @@
   <p> </p>
   <p>welcome to my epic website!</p>
 
+  <h1>about the site</h1>
+  <p>this is my epic site, and stuff. i'd like to put some stuff on this piece of crap site, but idk what to. xD</p>
+  <h1>about me</h1>
+  <p>so uhh, i'm sneaky and i exist.</p>
+  
+  <h1>nav</h1>
+  
   <div>
     <h2>game stuff</h2>
     <p> </p>
