The Cat (Meow!)

--- a/404.html
+++ b/404.html
@@ -16,8 +16,11 @@
   <i><h1 style="color:red;">Oops!</h1></i>
 
   <div>
-    <p>that page seems to not exist...hmm..maybe i screwed up, orrr you typed in an invalid url.</p>
+    <p>that page seems to not exist...hmm..maybe i screwed up, orrr you typed in an invalid url. so here. have a cat video</p>
     <p> </p>
+    <video controls>
+    <source src='https://github-production-user-asset-6210df.s3.amazonaws.com/105569073/268811052-5efdea52-c8b2-400a-819b-3139297fad21.mp4' type='video/mp4' style="width:200px;height:200px;">
+    </video>
     <img class="valign" src="https://media.tenor.com/pXEDrZV2s4QAAAAi/star-spinning.gif" width="42px" height="42px"><a style='font-size:1.3em' class="valign" href="index.html"> back</a>
   </div>
 </center>
