--- a/index.html
+++ b/index.html
@@ -21,7 +21,15 @@
   <h1>about the site</h1>
   <p>this is my epic site, and stuff. i'd like to put some stuff on this piece of crap site, but idk what to. xD</p>
   <h1>about me</h1>
-  <p>so uhh, i'm sneaky and i exist.</p>
+  <p>i'm sneaky and i like old stuff. such as the wonderful W I I and wacky old sites (like this one.)</p>
+  <p>i also like old OS's and tools for that OS. and also the wonderful badges below xD</p>
+  <p>also i make some of these badges :)</p>
+
+  <p> </p>
+  <img src="https://michaelmjd.neocities.org/images/barraconstruction.gif">
+  <a href="https://github.com"><img src="hostedwithgithub.png"></a>
+  <img src="https://michaelmjd.neocities.org/images/barraconstruction.gif">
+  <p> </p>
   
   <h1>nav</h1>
   
