--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   <h2>i'm sneaky</h2>
   <p> </p>
   <p>welcome to my epic website!</p>
+  <marquee style="border-left: 10 dotted rgb(0,0,255); border-right: 10 dashed rgb(0,0,255); border-top: 10 solid rgb(0,0,255); border-bottom: 10 double rgb(0,0,255)" behavior="alternate" scrollamount="20" scrolldelay="30" border="0">boing</marquee>
 
   <h1>about the site</h1>
   <p>this is my epic site, and stuff. i'd like to put some stuff on this piece of crap site, but idk what to. xD</p>
