--- a/index.html
+++ b/index.html
@@ -30,6 +30,11 @@
   <img src="https://michaelmjd.neocities.org/images/barraconstruction.gif">
   <p> </p>
   <a href="https://github.com"><img src="hostedwithgithub.png"></a>
+  <a href="https://discord.com"><img src="images/discord.gif" alt="Get Discord NOW!" width="88" height="31"></a>
+  <a href="https://www.amazon.com/"><img src="amazonbadge.gif" alt="In association with amazon.co.uk"></a>
+  <a href="http://www.theoldnet.com/#frombadge" title="Are you tired of this new Internet yet? Time to Get TheOldNet!"><img src="http://theoldnet.com/images/theoldnetanimblur2.gif" width="88" height="31" border=0></a>
+  <a href="http://theoldnet.com/get?year=1996&scripts=false&decode=false&url=http://windows95.com"><img src="https://michaelmjd.neocities.org/images/98plusani.gif" alt="Windows 98 PLUS! (except it takes you to windows95.com instead lol)"></a>
+  <p> </p>
   <p> </p>
   <img src="https://michaelmjd.neocities.org/images/barraconstruction.gif">
   <p> </p>
