marquee's are cool

--- a/index.html
+++ b/index.html
@@ -52,4 +52,6 @@
     <p> </p>
     <img class="valign" src="https://media.tenor.com/pXEDrZV2s4QAAAAi/star-spinning.gif" width="42px" height="42px"><a style='font-size:1.3em' class="valign" href="rblxstudio.html"> roblox studio (scripting)</a>
   </div>
+
+  <marquee style="border-left: 10 dotted rgb(0,0,255); border-right: 10 dashed rgb(0,0,255); border-top: 10 solid rgb(0,0,255); border-bottom: 10 double rgb(0,0,255)" behavior="alternate" scrollamount="20" scrolldelay="30" border="0">you've reached the bottom of the site</marquee>
 </center>
