--- a/comingsoon.html
+++ b/comingsoon.html
@@ -5,6 +5,7 @@
     background-image: url("img.jpeg");
     font-family: Helvetica, Sans-Serif;
     color: white;
+    background-size: cover;
   }
 
   .valign {
