--- a/wiiu.html
+++ b/wiiu.html
@@ -15,7 +15,7 @@
 
 <center>
   <i><h1>for Wii U! :D</h1></i>
-  <p>Yes, you can <b>load</b> this on a Wii U.</p>
+  <p>Yes, you <b>can</b> load this on a Wii U.</p>
 
   <h2>SMM1 Level Idea Generator</h2>
   <p>i coded this myself in javascript xD</p>
@@ -33,6 +33,7 @@
 
   <p id="smm1gen">Generated result here</p>
   <button onclick="generate()">Generate</button>
+  <p> </p>
   
   <div>
     <img class="valign" src="https://media.tenor.com/pXEDrZV2s4QAAAAi/star-spinning.gif" width="42px" height="42px"><a style='font-size:1.3em' class="valign" href="index.html"> back</a>
