--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
   <h1>nav</h1>
   
   <div>
+    <h2>for consoles</h2>
+    <p> </p>
+    <img class="valign" src="https://media.tenor.com/pXEDrZV2s4QAAAAi/star-spinning.gif" width="42px" height="42px"><a style='font-size:1.3em' class="valign" href="wiiu.html"> for wii u</a>
     <h2>game stuff</h2>
     <p> </p>
     <img class="valign" src="https://media.tenor.com/pXEDrZV2s4QAAAAi/star-spinning.gif" width="42px" height="42px"><a style='font-size:1.3em' class="valign" href="sm64.html"> super mario 64</a>
