--- a/index.html
+++ b/index.html
@@ -19,13 +19,18 @@
   <p> </p>
   <p>welcome to my epic website!</p>
   <marquee style="border-left: 10 dotted rgb(0,0,255); border-right: 10 dashed rgb(0,0,255); border-top: 10 solid rgb(0,0,255); border-bottom: 10 double rgb(0,0,255)" behavior="alternate" scrollamount="20" scrolldelay="30" border="0">boing</marquee>
-
+  <p> </p>
+  <img src="https://theoldnet.com/images/anibar.gif">
+    
   <h1>about the site</h1>
   <p>this is my epic site, and stuff. i'd like to put some stuff on this piece of crap site, but idk what to. xD</p>
   <h1>about me</h1>
   <p>i'm sneaky and i like old stuff. such as the wonderful W I I and wacky old sites (like this one.)</p>
   <p>i also like old OS's and tools for that OS. and also the wonderful badges below xD</p>
   <p>also i make some of these badges :)</p>
+  
+  <p> </p>
+  <img src="https://theoldnet.com/images/anibar.gif">
 
   <p> </p>
   <img src="https://michaelmjd.neocities.org/images/barraconstruction.gif">
@@ -34,6 +39,10 @@
   <a href="https://discord.com"><img src="https://michaelmjd.neocities.org/images/discord.gif" alt="Get Discord NOW!" width="88" height="31"></a>
   <a href="http://www.theoldnet.com/#frombadge" title="Are you tired of this new Internet yet? Time to Get TheOldNet!"><img src="http://theoldnet.com/images/theoldnetanimblur2.gif" width="88" height="31" border=0></a>
   <a href="http://theoldnet.com/get?year=1996&scripts=false&decode=false&url=http://windows95.com"><img src="https://michaelmjd.neocities.org/images/98plusani.gif" alt="Windows 98 PLUS! (except it takes you to windows95.com instead lol)"></a>
+  <a href="http://theoldnet.com/get?year=1996&amp;scripts=false&amp;decode=false&amp;url=http://microsoft.com//ie/ie.htm"><img border="0" src="/images/iexplorer.gif"></a>
+  <img src="https://michaelmjd.neocities.org/images/notepad2.gif">
+  <img src="https://michaelmjd.neocities.org/images/click_here.gif">
+  <img src="https://michaelmjd.neocities.org/images/netscape.gif">
   <p> </p>
   <a href="https://www.amazon.com/"><img src="https://raw.githubusercontent.com/ST5Sneaky/catnet/main/amazonbadge.gif" alt="In association with amazon.co.uk"></a>
   <p></p>
