--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   <a href="https://discord.com"><img src="https://michaelmjd.neocities.org/images/discord.gif" alt="Get Discord NOW!" width="88" height="31"></a>
   <a href="http://www.theoldnet.com/#frombadge" title="Are you tired of this new Internet yet? Time to Get TheOldNet!"><img src="http://theoldnet.com/images/theoldnetanimblur2.gif" width="88" height="31" border=0></a>
   <a href="http://theoldnet.com/get?year=1996&scripts=false&decode=false&url=http://windows95.com"><img src="https://michaelmjd.neocities.org/images/98plusani.gif" alt="Windows 98 PLUS! (except it takes you to windows95.com instead lol)"></a>
-  <a href="http://theoldnet.com/get?year=1996&amp;scripts=false&amp;decode=false&amp;url=http://microsoft.com//ie/ie.htm"><img border="0" src="/images/iexplorer.gif"></a>
+  <a href="http://theoldnet.com/get?year=1996&amp;scripts=false&amp;decode=false&amp;url=http://microsoft.com//ie/ie.htm"><img border="0" src="http://theoldnet.com/images/iexplorer.gif"></a>
   <img src="https://michaelmjd.neocities.org/images/notepad2.gif">
   <img src="https://michaelmjd.neocities.org/images/click_here.gif">
   <img src="https://michaelmjd.neocities.org/images/netscape.gif">
