But sneaky has the IQ of a goldfi-

--- a/sitebadge.html
+++ b/sitebadge.html
@@ -19,8 +19,8 @@
   <p>Here's my epic badge. :)</p>
   <p>xD</p>
 
-  <input type="text" value="<a href="https://st5sneaky.github.io"><img src="https://raw.githubusercontent.com/ST5Sneaky/st5sneaky.github.io/main/st5sneakybadge.png"></a>" readonly><br><br>
-  <a href="https://st5sneaky.github.io"><img src="https://raw.githubusercontent.com/ST5Sneaky/st5sneaky.github.io/main/st5sneakybadge.png"></a>
+  <input type="text" value="<a href='https://st5sneaky.github.io'><img src='https://raw.githubusercontent.com/ST5Sneaky/st5sneaky.github.io/main/st5sneakybadge.png'></a>" readonly>
+  <a href='https://st5sneaky.github.io'><img src='https://raw.githubusercontent.com/ST5Sneaky/st5sneaky.github.io/main/st5sneakybadge.png'></a>
   
   <div>
     <img class="valign" src="https://media.tenor.com/pXEDrZV2s4QAAAAi/star-spinning.gif" width="42px" height="42px"><a style='font-size:1.3em' class="valign" href="index.html"> back</a>
