promote me pls :(

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   <a href="http://theoldnet.com/get?year=1996&scripts=false&decode=false&url=http://windows95.com"><img src="https://michaelmjd.neocities.org/images/98plusani.gif" alt="Windows 98 PLUS! (except it takes you to windows95.com instead lol)"></a>
   <a href="http://theoldnet.com/get?year=1996&amp;scripts=false&amp;decode=false&amp;url=http://microsoft.com//ie/ie.htm"><img border="0" src="http://theoldnet.com/images/iexplorer.gif"></a>
   <a href="https://notepad-plus-plus.org/"><img src="https://michaelmjd.neocities.org/images/notepad2.gif"></a>
-  <img src="https://michaelmjd.neocities.org/images/click_here.gif">
+  <a href="/sitebadge.html"><img src="https://michaelmjd.neocities.org/images/click_here.gif"></a>
   <a href="https://www.mozilla.org/en-US/firefox/"><img src="https://michaelmjd.neocities.org/images/netscape.gif"></a>
   <p> </p>
   <a href="https://www.amazon.com/"><img src="https://raw.githubusercontent.com/ST5Sneaky/catnet/main/amazonbadge.gif" alt="In association with amazon.co.uk"></a>
@@ -53,6 +53,9 @@
   <h1>nav</h1>
   
   <div>
+    <h2>other parts of my site</h2>
+    <p> </p>
+    <img class="valign" src="https://media.tenor.com/pXEDrZV2s4QAAAAi/star-spinning.gif" width="42px" height="42px"><a style='font-size:1.3em' class="valign" href="sitebadge.html"> promote this site :D</a>
     <h2>for consoles</h2>
     <p> </p>
     <img class="valign" src="https://media.tenor.com/pXEDrZV2s4QAAAAi/star-spinning.gif" width="42px" height="42px"><a style='font-size:1.3em' class="valign" href="wiiu.html"> for wii u</a>
