--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
   <a href="https://notepad-plus-plus.org/"><img src="https://michaelmjd.neocities.org/images/notepad2.gif"></a>
   <a href="/sitebadge.html"><img src="https://michaelmjd.neocities.org/images/click_here.gif"></a>
   <a href="https://www.mozilla.org/en-US/firefox/"><img src="https://michaelmjd.neocities.org/images/netscape.gif"></a>
+  <a href="https://www.google.com/search?q=cat"><img src="/catbadge.png"></a>
   <p> </p>
   <a href="https://www.amazon.com/"><img src="https://raw.githubusercontent.com/ST5Sneaky/catnet/main/amazonbadge.gif" alt="In association with amazon.co.uk"></a>
   <p></p>
