--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
   <p> </p>
   <marquee style="border-left: 10 dotted rgb(0,0,255); border-right: 10 dashed rgb(0,0,255); border-top: 10 solid rgb(0,0,255); border-bottom: 10 double rgb(0,0,255)" behavior="alternate" scrollamount="20" scrolldelay="30" border="0">you've reached the bottom of the site</marquee>
   <p> </p>
-  <i><p>This website is very much still in construction and I will be periodically updating it every now and then. st5sneaky.github.io 2024-2024 &copy;</p></i>
+  <i><p>This website is very much still in construction and I will be periodically updating it every now and then.</p></i>
+  <i><p>st5sneaky.github.io 2024-2024 &reg;</p></i>
   <img src="https://michaelmjd.neocities.org/images/2.gif">
 </center>
