--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
   <marquee style="border-left: 10 dotted rgb(0,0,255); border-right: 10 dashed rgb(0,0,255); border-top: 10 solid rgb(0,0,255); border-bottom: 10 double rgb(0,0,255)" behavior="alternate" scrollamount="20" scrolldelay="30" border="0">boing</marquee>
   <p> </p>
   <img src="https://theoldnet.com/images/anibar.gif">
+  <p> </p>
+  <img src="https://michaelmjd.neocities.org/images/37.gif">
     
   <h1>about the site</h1>
   <p>this is my epic site, and stuff. i'd like to put some stuff on this piece of crap site, but idk what to. xD</p>
@@ -70,10 +72,13 @@
     <img class="valign" src="https://media.tenor.com/pXEDrZV2s4QAAAAi/star-spinning.gif" width="42px" height="42px"><a style='font-size:1.3em' class="valign" href="rblxstudio.html"> roblox studio (scripting)</a>
   </div>
 
+  <p>Contact me thru AOL Instant Messenger: @ST5Sneaky (jk)</p>
   <p> </p>
   <marquee style="border-left: 10 dotted rgb(0,0,255); border-right: 10 dashed rgb(0,0,255); border-top: 10 solid rgb(0,0,255); border-bottom: 10 double rgb(0,0,255)" behavior="alternate" scrollamount="20" scrolldelay="30" border="0">you've reached the bottom of the site</marquee>
   <p> </p>
   <i><p>This website is very much still in construction and I will be periodically updating it every now and then.</p></i>
   <i><p>st5sneaky.github.io 2024-2024 &reg;</p></i>
   <img src="https://michaelmjd.neocities.org/images/2.gif">
+  <i><p>This site was last modified probably recently. :)</p></i>
+  <img src="https://michaelmjd.neocities.org/images/12.gif">
 </center>
