--- a/index.html
+++ b/index.html
@@ -37,15 +37,15 @@
   <p> </p>
   <img src="https://michaelmjd.neocities.org/images/barraconstruction.gif">
   <p> </p>
-  <a href="https://github.com"><img src="hostedwithgithub.png"></a>
-  <a href="https://discord.com"><img src="https://michaelmjd.neocities.org/images/discord.gif" alt="Get Discord NOW!" width="88" height="31"></a>
-  <a href="http://www.theoldnet.com/#frombadge" title="Are you tired of this new Internet yet? Time to Get TheOldNet!"><img src="http://theoldnet.com/images/theoldnetanimblur2.gif" width="88" height="31" border=0></a>
-  <a href="http://theoldnet.com/get?year=1996&scripts=false&decode=false&url=http://windows95.com"><img src="https://michaelmjd.neocities.org/images/98plusani.gif" alt="Windows 98 PLUS! (except it takes you to windows95.com instead lol)"></a>
-  <a href="http://theoldnet.com/get?year=1996&amp;scripts=false&amp;decode=false&amp;url=http://microsoft.com//ie/ie.htm"><img border="0" src="http://theoldnet.com/images/iexplorer.gif"></a>
-  <a href="https://notepad-plus-plus.org/"><img src="https://michaelmjd.neocities.org/images/notepad2.gif"></a>
+  <a href="https://github.com" target="_blank"><img src="hostedwithgithub.png"></a>
+  <a href="https://discord.com" target="_blank"><img src="https://michaelmjd.neocities.org/images/discord.gif" alt="Get Discord NOW!" width="88" height="31"></a>
+  <a href="http://www.theoldnet.com/#frombadge" target="_blank" title="Are you tired of this new Internet yet? Time to Get TheOldNet!"><img src="http://theoldnet.com/images/theoldnetanimblur2.gif" width="88" height="31" border=0></a>
+  <a href="http://theoldnet.com/get?year=1996&scripts=false&decode=false&url=http://windows95.com" target="_blank"><img src="https://michaelmjd.neocities.org/images/98plusani.gif" alt="Windows 98 PLUS! (except it takes you to windows95.com instead lol)"></a>
+  <a href="http://theoldnet.com/get?year=1996&amp;scripts=false&amp;decode=false&amp;url=http://microsoft.com//ie/ie.htm" target="_blank"><img border="0" src="http://theoldnet.com/images/iexplorer.gif"></a>
+  <a href="https://notepad-plus-plus.org/" target="_blank"><img src="https://michaelmjd.neocities.org/images/notepad2.gif"></a>
   <a href="/sitebadge.html"><img src="https://michaelmjd.neocities.org/images/click_here.gif"></a>
-  <a href="https://www.mozilla.org/en-US/firefox/"><img src="https://michaelmjd.neocities.org/images/netscape.gif"></a>
-  <a href="https://www.google.com/search?q=cat"><img src="/catbadge.png"></a>
+  <a href="https://www.mozilla.org/en-US/firefox/" target="_blank"><img src="https://michaelmjd.neocities.org/images/netscape.gif"></a>
+  <a href="https://www.google.com/search?q=cat" target="_blank"><img src="/catbadge.png"></a>
   <p> </p>
   <a href="https://www.microsoft.com/en-us/microsoft-365/"><img src="https://michaelmjd.neocities.org/images/hotmail3.gif"></a>
   <a href="https://www.mozilla.org/en-US/firefox/"><img src="https://michaelmjd.neocities.org/images/addchannel.gif"></a>
