--- a/index.html
+++ b/index.html
@@ -47,12 +47,12 @@
   <a href="https://www.mozilla.org/en-US/firefox/" target="_blank"><img src="https://michaelmjd.neocities.org/images/netscape.gif"></a>
   <a href="https://www.google.com/search?q=cat" target="_blank"><img src="/catbadge.png"></a>
   <p> </p>
-  <a href="https://www.microsoft.com/en-us/microsoft-365/"><img src="https://michaelmjd.neocities.org/images/hotmail3.gif"></a>
-  <a href="https://www.mozilla.org/en-US/firefox/"><img src="https://michaelmjd.neocities.org/images/addchannel.gif"></a>
+  <a href="https://www.microsoft.com/en-us/microsoft-365/" target="_blank"><img src="https://michaelmjd.neocities.org/images/hotmail3.gif"></a>
+  <a href="https://www.mozilla.org/en-US/firefox/" target="_blank"><img src="https://michaelmjd.neocities.org/images/addchannel.gif"></a>
   <img src="https://michaelmjd.neocities.org/images/frontpag.gif">
   <img src="https://michaelmjd.neocities.org/images/got_html.gif">
   <p> </p>
-  <a href="https://www.amazon.com/"><img src="https://raw.githubusercontent.com/ST5Sneaky/catnet/main/amazonbadge.gif" alt="In association with amazon.co.uk"></a>
+  <a href="https://www.amazon.com/" target="_blank"><img src="https://raw.githubusercontent.com/ST5Sneaky/catnet/main/amazonbadge.gif" alt="In association with amazon.co.uk"></a>
   <p></p>
   <p> </p>
   <img src="https://michaelmjd.neocities.org/images/barraconstruction.gif">
