--- a/sitebadge.html
+++ b/sitebadge.html
@@ -19,12 +19,22 @@
   <p>Here's my epic badge. :)</p>
   <p>xD</p>
 
+  <img src="https://theoldnet.com/images/anibar.gif">
+
+  <p>Old Version (1.0)</p>
   <input type="text" value="<a href='https://st5sneaky.github.io'><img src='https://raw.githubusercontent.com/ST5Sneaky/st5sneaky.github.io/main/st5sneakybadge.png'></a>" readonly>
   <p> </p>
   <a href='https://st5sneaky.github.io'><img src='https://raw.githubusercontent.com/ST5Sneaky/st5sneaky.github.io/main/st5sneakybadge.png'></a>
+  <p> </p>
+  <p>Cooler Version (2.0)</p>
+  <input type="text" value="<a href='https://st5sneaky.github.io'><img src='https://raw.githubusercontent.com/ST5Sneaky/st5sneaky.github.io/main/st5sneakycoolerbadge.png'></a>" readonly>
+  <p> </p>
+  <a href='https://st5sneaky.github.io'><img src='https://raw.githubusercontent.com/ST5Sneaky/st5sneaky.github.io/main/st5sneakycoolerbadge.png'></a>
   <p> </p>
   
   <div>
     <img class="valign" src="https://media.tenor.com/pXEDrZV2s4QAAAAi/star-spinning.gif" width="42px" height="42px"><a style='font-size:1.3em' class="valign" href="index.html"> back</a>
   </div>
+
+  <img src="https://theoldnet.com/images/anibar.gif">
 </center>
