--- a/index.html
+++ b/index.html
@@ -64,6 +64,8 @@
     <h2>other parts of my site</h2>
     <p> </p>
     <img class="valign" src="https://media.tenor.com/pXEDrZV2s4QAAAAi/star-spinning.gif" width="42px" height="42px"><a style='font-size:1.3em' class="valign" href="sitebadge.html"> promote this site :D</a>
+    <p> </p>
+    <img class="valign" src="https://media.tenor.com/pXEDrZV2s4QAAAAi/star-spinning.gif" width="42px" height="42px"><a style='font-size:1.3em' class="valign" href="personalpage.html"> about me but extended :)</a>
     <h2>for consoles</h2>
     <p> </p>
     <img class="valign" src="https://media.tenor.com/pXEDrZV2s4QAAAAi/star-spinning.gif" width="42px" height="42px"><a style='font-size:1.3em' class="valign" href="wiiu.html"> for wii u</a>
