--- a/index.html
+++ b/index.html
@@ -68,6 +68,10 @@
     <img class="valign" src="https://media.tenor.com/pXEDrZV2s4QAAAAi/star-spinning.gif" width="42px" height="42px"><a style='font-size:1.3em' class="valign" href="personalpage.html"> about me but extended :)</a>
     <p> </p>
     <img class="valign" src="https://media.tenor.com/pXEDrZV2s4QAAAAi/star-spinning.gif" width="42px" height="42px"><a style='font-size:1.3em' class="valign" href="catshrine.html"> cat shrine</a>
+    <p> </p>
+    <h2>webring</h2>
+    <p> </p>
+    <img class="valign" src="https://media.tenor.com/pXEDrZV2s4QAAAAi/star-spinning.gif" width="42px" height="42px"><a style='font-size:1.3em' class="valign" href="webring.html"> webring</a>
     <h2>for consoles</h2>
     <p> </p>
     <img class="valign" src="https://media.tenor.com/pXEDrZV2s4QAAAAi/star-spinning.gif" width="42px" height="42px"><a style='font-size:1.3em' class="valign" href="wiiu.html"> for wii u</a>
