--- a/webring.html
+++ b/webring.html
@@ -24,7 +24,7 @@
 
   <table style="width:30%">
   <tr>
-    <td><a href="https://st5sneaky.github.io/catnet">CatNet (Made by me!)</a></td>
+    <td><a href="#">Placeholder link (This could be your site!)</a></td>
     <td><a href="#">Placeholder link (This could be your site!)</a></td>
     <td><a href="#">Placeholder link (This could be your site!)</a></td>
   </tr>
