--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<title>hi! i'm sneaky | st5sneaky.github.io</title>
+<title>hi! i'm sneaky | sneakytank5</title>
 
 <style>
   body {
@@ -24,12 +24,10 @@
   <p> </p>
   <img src="https://michaelmjd.neocities.org/images/37.gif">
     
-  <h1>about the site</h1>
+  <i><h1>about the site</h1></i>
   <p>this is my epic site, and stuff. i'd like to put some stuff on this piece of crap site, but idk what to. xD</p>
-  <h1>about me</h1>
-  <p>i'm sneaky and i like old stuff. such as the wonderful W I I and wacky old sites (like this one.)</p>
-  <p>i also like old OS's and tools for that OS. and also the wonderful badges below xD</p>
-  <p>also i make some of these badges :)</p>
+  <i><h1>about me</h1></i>
+  <p>idk what to say here</p>
   
   <p> </p>
   <img src="https://theoldnet.com/images/anibar.gif">
@@ -85,13 +83,13 @@
     <img class="valign" src="https://media.tenor.com/pXEDrZV2s4QAAAAi/star-spinning.gif" width="42px" height="42px"><a style='font-size:1.3em' class="valign" href="rblxstudio.html"> roblox studio (scripting)</a>
   </div>
 
-  <p>Contact me thru AOL Instant Messenger: @ST5Sneaky (jk)</p>
+  <p>contact uh. uhh.. uhhh</p>
   <p> </p>
   <marquee style="border-left: 10 dotted rgb(0,0,255); border-right: 10 dashed rgb(0,0,255); border-top: 10 solid rgb(0,0,255); border-bottom: 10 double rgb(0,0,255)" behavior="alternate" scrollamount="20" scrolldelay="30" border="0">you've reached the bottom of the site</marquee>
   <p> </p>
   <i><p>This website is very much still in construction and I will be periodically updating it every now and then.</p></i>
-  <i><p>st5sneaky.github.io 2024-2024 &reg;</p></i>
+  <i><p>sneakytank5lol.github.io 2024-2025 &reg;</p></i>
   <img src="https://michaelmjd.neocities.org/images/2.gif">
-  <i><p>This site was last modified probably recently. :)</p></i>
+  <i><p>Last modified: NEVER!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!</p></i>
   <img src="https://michaelmjd.neocities.org/images/12.gif">
 </center>
