--- a/personalpage.html
+++ b/personalpage.html
@@ -36,7 +36,7 @@
     <td>Windows 98/XP</td>
   </tr>
   <tr>
-    <td>Microsoft FrontPage (new interest xD)</td>
+    <td>Microsoft FrontPage</td>
   </tr>
   <tr>
     <td>Flask</td>
@@ -48,12 +48,13 @@
     <td>Old Internet Badges</td>
   </tr>
   <tr>
-    <td>*Insert Interest Here*</td>
+    <td>EarthBound (NEW!)</td>
   </tr>
   </table>
 
-  <h2>*Insert Section Number 3*</h2>
-  <p>like i told you this website is still under construction..idk what to put here. LOL</p>
+  <h2>Earthbound???</h2>
+  <p>yeah so i'm gonna have a whole section on that..Soon!</p>
+  <p>check nav periodically.</p>
   <p> </p>
   
   <div>
