--- a/gaming.html
+++ b/gaming.html
@@ -17,5 +17,5 @@
   <h1>welcome to the internet.. <i>kid.</i></h1>
   <p><i>the vault of all things gaming</i></p>
   <p> </p>
-  <img class="valign" src="https://media.tenor.com/pXEDrZV2s4QAAAAi/star-spinning.gif" width="42px" height="42px"><a style='font-size:1.3em' class="valign" href="comingsoon.html"> earthbound halloween hack</a>
+  <img class="valign" src="https://media.tenor.com/pXEDrZV2s4QAAAAi/star-spinning.gif" width="42px" height="42px"><a style='font-size:1.3em' class="valign" href="ebhh.html"> earthbound halloween hack</a>
 </center>
