--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     <img class="valign" src="https://media.tenor.com/pXEDrZV2s4QAAAAi/star-spinning.gif" width="42px" height="42px"><a style='font-size:1.3em' class="valign" href="rblxstudio.html"> roblox studio (scripting)</a>
     <h2>...</h2>
     <p> </p>
-    <img class="valign" src="https://media.tenor.com/pXEDrZV2s4QAAAAi/star-spinning.gif" width="42px" height="42px"><a style='font-size:1.3em' class="valign" href="comingsoon.html"> ???</a>
+    <img class="valign" src="https://media.tenor.com/pXEDrZV2s4QAAAAi/star-spinning.gif" width="42px" height="42px"><a style='font-size:1.3em' class="valign" href="gaming.html"> ???</a>
   </div>
 
   <p>contact uh. uhh.. uhhh</p>
