--- a/ebhh.html
+++ b/ebhh.html
@@ -23,7 +23,7 @@
     <p>soo this EarthBound ROM hack is kind of hard to find tbh, so as someone who HAS found it i'm going to mirror the IPS file.</p>
     <p>i only have found the CENSORED version, which changes the slurs and swears to be different and family friendly.</p>
     <p>I WON'T BE PROVIDING A ROM HERE. YOU WILL NEED TO FIND LUNAR IPS AND A CLEAN EARTHBOUND ROM YOURSELF.</p>
-    <a href="sneakytank5lol.github.io/halloweenfinal108censored.ips">halloweenfinal108censored.ips (272 KB)</a>
+    <a href="https://sneakytank5lol.github.io/halloweenfinal108censored.ips">halloweenfinal108censored.ips (272 KB)</a>
     <p>(.ips files are Lunar IPS patch files. they are most commonly used for ROM hacks and nothing else.)</p>
     <p> </p>
     <img class="valign" src="https://media.tenor.com/pXEDrZV2s4QAAAAi/star-spinning.gif" width="42px" height="42px"><a style='font-size:1.3em' class="valign" href="index.html"> back</a>
